gccida/g0/dump_prediction
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_prediction/src/predict.c:648:24: error: must use 'enum' tag to refer to type 'br_predictor'
void  dump_prediction( br_predictor predictor, int probability, basic_block bb, int used) 
                       ^
                       enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_prediction/src/predict.c:659:22: error: use of undeclared identifier 'unk_7FF2EA'
v4 = ( const char *)&unk_7FF2EA; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_prediction/src/predict.c:665:1: error: use of undeclared identifier 'predictor_info_0'; did you mean 'predictor_info'?
predictor_info_0[predictor].name, 
^~~~~~~~~~~~~~~~
predictor_info
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_prediction/src/predict.c:86:36: note: 'predictor_info' declared here
static const struct predictor_info predictor_info[]= {
                                   ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_prediction/src/obj/predict.o] Error 1
